# nonebot-plugin-sparkapi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: Bug.yml  bug_report.yml  feature_suggest.yml
.github/workflows/: pypi-publish.yml
demo/: 科大讯飞星火语言模型项目汇报.pptx
nonebot_plugin_sparkapi/: ImgGenApi.py  PPTGenApi.py  SparkApi.py  __init__.py  config.py  data.py  funcs.py  info.py  presets.py  slsessions.py  storage.py
nonebot_plugin_sparkapi/API/: ImgGenApi.py  PPTGenApi.py  SparkApi.py
nonebot_plugin_sparkapi/machers/: __init__.py  blockprivate.py  chat.py  data.py  help.py  imggen.py  pptgen.py
nonebot_plugin_sparkapi/machers/preset/: __init__.py  create.py  delete.py  set.py  show.py
nonebot_plugin_sparkapi/machers/session/: __init__.py  clear.py  load.py  save.py
nonebot_plugin_sparkapi/matchers/: __init__.py  block_private.py  chat.py  clear.py  help.py  imggen.py  pptgen.py
nonebot_plugin_sparkapi/matchers/preset/: __init__.py  base.py  create.py  delete.py  preset.py  set.py  show.py
nonebot_plugin_sparkapi/matchers/session/: __init__.py  base.py  delete.py  load.py  save.py  session.py  show.py
src/nonebot_plugin_sparkapi/: __init__.py  config.py  funcs.py  preset.py  session.py  utils.py
src/nonebot_plugin_sparkapi/API/: PPTGenApi.py  SparkApi.py
src/nonebot_plugin_sparkapi/api/: image.py  ppt.py  spark.py
src/nonebot_plugin_sparkapi/matchers/: __init__.py  alc.py  block_private.py  chat.py  clear.py  help.py  image_gen.py  imggen.py  ppt_gen.py  pptgen.py  preset.py  session.py
src/nonebot_plugin_sparkapi/matchers/preset/: __init__.py  base.py  create.py  delete.py  set.py
src/nonebot_plugin_sparkapi/matchers/session/: base.py  load.py  session.py  show.py
